# denemeSAAS

./: CMakeLists.txt  Dockerfile  DocumentConverter.cpp  DocumentConverter.h  ImageConverter.cpp  ImageConverter.h  ads.txt  main.cpp
db/: ad_clicks.txt  ad_links.csv  educations.csv  experiences.csv  skills.csv
files/: deneme_dosya.txt
templates/: contact_me.html  document_converter.html  footer.html  image_converter.html  index.html  nav.html  privacy_policy.html  terms_of_service.html
